Flatfile RG support text with semicolon